добавлено емайл оповещание

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
     <string name="menu_home">Домашняя</string>
     <string name="menu_gallery">Галлерея</string>
-    <string name="menu_slideshow">Слайдшоу</string>
+    <string name="menu_slideshow">Ваши дети</string>
 
 
     <string name="text_bottom">Войдите в свою учётную запись!</string>
