--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="register">Зарегистрироваться</string>
     <string name="button_add_child">Добавить ребенка</string>
     <string name="your_childs">Ваши дети</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
