--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">caring parents</string>
-    <string name="app_login">Login</string>
+    <string name="app_login">Applications</string>
     <string name="app_name_big">Caring Parents</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
